--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -6,5 +6,10 @@
   </head>
   <body>
 <a href="/easycms">Easy CMS!</a>
+<form action="/teste" method="get">
+  <input type="text" name="valor1" placeholder="valor1">
+  <input type="text" name="valor2" placeholder="valor2">
+  <input type="submit" value="Enviar">
+</form>
   </body>
 </html>
