--- a/myapp/public/stylesheets/cms.css
+++ b/myapp/public/stylesheets/cms.css
@@ -11,7 +11,7 @@
   font-size: 1.15em;
   border-radius: 5px;
 }
-.box{
+.box_login{
   background-color: #96ceb4;
   padding: 2vmax;
   margin: 1vmax;
@@ -21,35 +21,45 @@
   }
 .btn_wrap .btn{padding:3px;margin: 3px;}
 /*-------------------LOGIN /\ /\ /\ -------------  */
-body{background-color: #ffeead}
+body{background-color: #3f4a5c}
+.box{display: flex;background-color: red;margin:2vh 0;
+  flex-direction: column; align-items: center;
+  justify-content: center;
+  background-color: #5f6974;
+  width: 65vw; max-width: 700px;
+  margin: 1vh auto;
+  box-shadow: 1px 1px 1px 0 #333;
+  max-height: 90vh;overflow-y: auto;
+}
 .container{display: flex;flex-direction: column;}
-.menu_top{display: flex;flex-direction: row;background-color: #ffcc5c;
-padding:5px;box-shadow: 1px 1px 1px 0 #bbb;}
-.btn_menu{padding: 2px; margin: 0 2px;
-background-color: #ff6f69;color: #eee;
+.menu_top{display: flex;flex-direction: row;background-color: #5f6974;
+padding:5px;}
+.btn_menu{padding: 3px; margin: 0 2px;
+background-color:#7c91a7;color: #eee;
 position: relative;transition: 0.3s;
-box-shadow: 1px 1px 1px 0px #b28e40;}
-.btn_menu:hover{top:-2px;left:-2px;box-shadow: 2px 2px 1px 1px #b28e40}
+box-shadow: 1px 1px 1px 0px #444;}
+.btn_menu:hover{top:-2px;left:-2px;box-shadow: 2px 2px 1px 1px #333}
 .content{
   display: flex; flex-direction: column; align-items: center;
   justify-content: center;  margin: auto;  width: 70vw; max-width: 700px;
-  background-color: #ffcc5c; padding: 1vw;
+  padding: 1vw;
   margin: 1vh auto; box-shadow: 1px 1px 1px 0 #bbb;
 }
 a{text-decoration: none}
 #newpost{
 display: none;
 }
-#texto{
+#posts{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .newpost{
   width: 70vw;
   max-width: 700px;
   display: flex;  flex-direction: column;
-  width: 70vw;
-  background-color: #96ceb4;padding: 1vmin;
+  background-color: #5f6974;padding: 1vmin;
+
   }
 .newpost .input{
   font-size: 1.1em;
@@ -57,8 +67,26 @@ display: none;
 }
 .newpost textarea{  resize: vertical;}
 .newpost textarea{  min-height: 100px;}
-.newpost h3{  color: #ff6f69;  box-shadow: 1px 0 0 0 white;}
+.newpost h3{  color: #ddd;}
 .box_post{
-  margin:5px;padding:5px;
-  background-color: white;
+  margin:5px;padding:5px;width: 300px;
+  background-color: #aaa; height: 120px;
+  overflow-y: auto;
+}
+.link_box{
+  color: #fff;
+  height: auto;
+}
+.link_box .titulo{  text-align: center;  font-size: 1.1em;  margin: 0;}
+.link_box .tag{  font-size: 0.75em;  color: black; margin: 0;}
+.link_box .resumo{
+  font-size: 1.0em;
+  color: black;
+  text-align: justify;
+}
+
+.square{
+  min-height: 50px;
+  min-width: 50px;
+  background-color:red;
 }
