--- a/myapp/views/cms_log.ejs
+++ b/myapp/views/cms_log.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/cms.css' />
+    <meta name="viewport" content="width=device-width, inicial-scale=1.0" =>
   </head>
   <body>
     <div class="flex_center">
