--- a/myapp/public/stylesheets/cms.css
+++ b/myapp/public/stylesheets/cms.css
@@ -1,92 +1,32 @@
-.flex_center{
-  display: flex; align-content: center;justify-content: center;
-  align-items: center;
-}
-.input{
-  display: flex;flex-direction: column;
-}
-.input input{
-  padding:3px;
-  margin:2px;
-  font-size: 1.15em;
-  border-radius: 5px;
-}
-.box_login{
-  background-color: #96ceb4;
-  padding: 2vmax;
-  margin: 1vmax;
-}
-.btn_wrap{
-  display: flex; align-content: center;align-self: center;
-  }
+*{font-family: 'Slabo 27px';}
+.flex_center{ display: flex; align-content: center;
+  justify-content: center;  align-items: center;}
+.form{display: flex;flex-direction: column;width: 80%; margin: 10% 8%;}
+.input{ padding:3px;margin:2px; font-size: 1.15em;border-radius: 5px;}
+.input:nth-last-child(2){min-height: 150px;}
+.box_login{ background-color: #96ceb4;  padding: 2vmax;  margin: 1vmax;}
+.btn_wrap{ display: flex; align-content: center;align-self: center; }
 .btn_wrap .btn{padding:3px;margin: 3px;}
-/*-------------------LOGIN /\ /\ /\ -------------  */
-body{background-color: #3f4a5c}
-.box{display: flex;background-color: red;margin:2vh 0;
-  flex-direction: column; align-items: center;
-  justify-content: center;
-  background-color: #5f6974;
-  width: 65vw; max-width: 700px;
-  margin: 1vh auto;
-  box-shadow: 1px 1px 1px 0 #333;
-  max-height: 90vh;overflow-y: auto;
-}
-.container{display: flex;flex-direction: column;}
-.menu_top{display: flex;flex-direction: row;background-color: #5f6974;
-padding:5px;}
-.btn_menu{padding: 3px; margin: 0 2px;
-background-color:#7c91a7;color: #eee;
-position: relative;transition: 0.3s;
-box-shadow: 1px 1px 1px 0px #444;}
-.btn_menu:hover{top:-2px;left:-2px;box-shadow: 2px 2px 1px 1px #333}
-.content{
-  display: flex; flex-direction: column; align-items: center;
-  justify-content: center;  margin: auto;  width: 70vw; max-width: 700px;
-  padding: 1vw;
-  margin: 1vh auto; box-shadow: 1px 1px 1px 0 #bbb;
-}
-a{text-decoration: none}
-#newpost{
-display: none;
-}
-#posts{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.newpost{
-  width: 70vw;
-  max-width: 700px;
-  display: flex;  flex-direction: column;
-  background-color: #5f6974;padding: 1vmin;
-
-  }
-.newpost .input{
-  font-size: 1.1em;
-  margin: 3px;
-}
-.newpost textarea{  resize: vertical;}
-.newpost textarea{  min-height: 100px;}
-.newpost h3{  color: #ddd;}
-.box_post{
-  margin:5px;padding:5px;width: 300px;
-  background-color: #aaa; height: 120px;
-  overflow-y: auto;
-}
-.link_box{
-  color: #fff;
-  height: auto;
-}
-.link_box .titulo{  text-align: center;  font-size: 1.1em;  margin: 0;}
-.link_box .tag{  font-size: 0.75em;  color: black; margin: 0;}
-.link_box .resumo{
-  font-size: 1.0em;
-  color: black;
-  text-align: justify;
-}
-
-.square{
-  min-height: 50px;
-  min-width: 50px;
-  background-color:red;
-}
+/*------------ LOGIN ---------------*/
+.cor1{background-color:	#444444 }
+.cor2{background-color:	#ffa500 }
+.cor3{background-color:	#e2e8ee}
+.cor4{background-color:	#00abff }
+.cor5{background-color:	#315e6f }
+/*-------------Cores----------------*/
+.container{  display: flex;flex-direction: row;}
+.selecao{height: 90vh;width: 17vw;  min-width: 200px;}
+.lista_post{height: 85%;margin-bottom: 5%;overflow-y: auto;}
+.novo_post{height: 10%;border-radius:5px;box-shadow: 1px 0 2px 0 #222;transition: 0.5s;}
+.novo_post:hover{position: relative;top: -3px;box-shadow: 0px 3px 2px 0 #222;}
+.mini_post{display: flex; flex-direction: column;text-decoration: none;color:black;
+  height: 13vh;overflow:hidden;margin-bottom: 3px;padding-bottom: 3px;}
+  .mini_post h4{margin:0;text-align: center;}
+  .mini_post p{margin:5px 0 0 5px;}
+.mini_post:hover{background-color:#CBD0D6;cursor: pointer;}
+.conteudo{width: 95%;margin: 0 2%;}
+::-webkit-scrollbar {background-color: #555;width: 0.7em;}
+::-webkit-scrollbar-thumb{  background-color: #ffa500;border:2px solid #444}
+#post_area{  display: flex; flex-wrap: nowrap;}
+#post_form{  visibility: hidden;}
+form textarea{resize: none}
