--- a/myapp/views/cms.ejs
+++ b/myapp/views/cms.ejs
@@ -52,7 +52,7 @@
             <div class="btn_wrap">
               <input type="reset" value="Resetar Campos" class='btn'>
               <input type="submit" id='enviar' value="Update Post" class='btn'>
-              <a id='deletar' class="btn">!!!! DELETAR!!!!</a>
+              <button id='deletar' class="btn war">!!!! DELETAR!!!!</button>
             </div>
           </form>
         </div>
